2010-02-17  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/SimpleVector.h : new template class SimpleMatrix<int>
	that derives from SimpleVector<int>, with typedefs NumericMatrix
	IntegerMatrix, LogicalMatrix, RawMatrix, ComplexMatrix. The actual 
	functionality comes from SimpleVector but SimpleMatrix has 
	constructors and assignment operators that behave slighlty
	differently : they check that their input is a matrix

	* src/Rcpp/traits/wrap_type_traits: added support for float

	* src/Rcpp/Rcpp.h: now including RObject here instead of in 
	RcppCommon.h because RObject is a client of implicit converters
	(attr) and so we need to leave a hook for third party code, e.g.
	RcppArmadillo

2010-02-16  Dirk Eddelbuettel  <edd@debian.org>

	* R/RcppExample.R, man/RcppExample.Rd: Moved to RcppExamples package
	* man/RcppDate.Rd, man/RcppParams.Rd, man/RcppResultSet.Rd, RcppVector.Rd,
	  src/RcppExample.cpp: Idem

	* inst/examples/FastLM: Slightly reworked, actual code factored out
	  and used in a per-library demo/test script and a joint benchmark.r

2010-02-15  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/FastLM: New example directory with two 'fast lm'
	  implementations using, respectively, GNU GSL (in C) and Armadillo
	  (in C++); Armadillo is seen as faster for lack of extra copying

2010-02-14  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Language.h: accepting Function in unary_call and
	binary_call to support STL algorithms using R functions.

2010-02-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.7.7

	* debian/*: Similarly updated for new release to Debian

2010-02-14  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/Language.h: fixing serious bug. The 'code bloat'
	constructors taking a std::string did not explicitely
	create a symbol, so the created calls were wrong.

	* src/Rcpp/Language.h: new template classes Rcpp::unary_call
	and Rcpp::binary_call to allow use of Language objects
	in STL algorithms.
